--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <!-- =================== -->
         <div class="button d-flex justify-content-center mt-4 rounded-5">
-          <a href="" class="text-decoration-none py-3">Continue</a>
+          <a href="#" class="text-decoration-none py-3">Continue</a>
         </div>
       </div>
     </div>
